# kg-labs

./: .gitignore  CMakeLists.txt  CubeShader.hlsl  README.md
include/: App.h  D3D12Context.h  KeyboardMouse.h  Window.h
lab1-shadertoy-2dRacing/: Lab1.glsl
lab2-shadertoy-3dTanks/: Lab2.glsl
src/: App.cpp  CMakeLists.txt  D3D12Context.cpp  KeyboardMouse.cpp  Window.cpp  main.cpp
